# yolo_model_faceliveness

./: README.md  main.py  pyproject.toml  train.py
Dataset/SplitData/: data.yaml
Dataset/SplitData/test/labels/: 17076300243462946.txt  17076300244476106.txt  17076300246566126.txt  17076300247826247.txt  17076300248836148.txt  17076300252827103.txt  1707630025493313.txt  1707630025951366.txt  17076300262588992.txt  17076300273602452.txt  17076300275823576.txt  17076300284654913.txt  17076300286250448.txt  1707630028687067.txt  17076300294921534.txt  17076300302847114.txt  17076300304118633.txt  17076300309281693.txt  17076300310431683.txt  17076300311701732.txt  1707630031469867.txt  17076300315018957.txt  17076300316934745.txt  17076300319376917.txt  17076300320964358.txt  17076300321264508.txt  17076300324654164.txt  1707630032830253.txt  17076300334083061.txt  17076300334753065.txt  17076300343726907.txt  17076300345502386.txt  17076300348546402.txt  17076300349806948.txt  17076300350417097.txt  1707630035443593.txt  17076300355949264.txt  17076300356839108.txt  1707630036010983.txt  17076300361007497.txt  (+41 more)
Dataset/SplitData/train/: labels.cache
Dataset/SplitData/train/labels/: 1707630024389156.txt  17076300244216106.txt  17076300244686103.txt  1707630024522625.txt  170763002458161.txt  1707630024608614.txt  17076300246876101.txt  17076300247506113.txt  17076300248566127.txt  17076300249166157.txt  17076300249486134.txt  1707630024979615.txt  17076300250256128.txt  17076300250586112.txt  17076300251237085.txt  (+548 more)
Dataset/SplitData/val/: labels.cache
(+151 files in other folders)
